Replace language id with code (#35)
* Replaces language id with language code in remaining places

* Adds backwards compatibility
